e-gw/manifests/mxfuwpre-capo-1/usecase_1/netpol/restrict-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-generic-egress
  namespace: poc-egw
spec:
  podSelector:
    matchExpressions:
      - key: egw
        operator: NotIn
        values:
          - poc-uc1
  policyTypes:
    - Egress
  egress:
    # No egress rules specified means no traffic is allowed.
    - to:
        - ipBlock:
            cidr: 192.168.20.0/24   # IP range for google.com (one of them)
            # except:
            # - 192.168.20.8/32
